fix: overflow

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
   display: grid;
   place-content: center;
   font-family: "Quicksand", sans-serif;
+  overflow-x: hidden;
 }
 
 /* NAVBAR */
